[Fix][broker] Fix JDK17 compatibility issues. (#15540)